[package]
name = "class-sign-in"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
rand = { version = "0.8", features = ["std", "alloc"] }
